--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!00-food-for-thought.qmd"
+    - "!biased-algorithms.qmd"
     - "!01-purchase-to-plate.qmd"
     - "!02-competition-design.qmd"
     - "!03-first-place-winners.qmd"
@@ -134,15 +134,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/case-studies/posts/2023/08/21/00-food-for-thought.qmd">
+<a href="/viewpoints/posts/2023/09/06/biased-algorithms.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Food for Thought: Using AI to support food and nutrition policy
-To develop healthy diet plans, policy makers need to know what foods people are buying and the nutritional content of those foods -- but that information is in separate datasets. Can machine learning link them together? That question inspired a competition. A new collection of articles tells the full story.
+## For minorities, biased AI algorithms can damage almost every part of life
+'Bad data does not only produce bad outcomes. It can also help to suppress sections of society.' In his new book, *Is Artificial Intelligence Racist?*, Arshin Adib-Moghaddam explores the relationship between various forms of racism and sexism and artificial intelligence.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](case-studies/posts/2023/08/21/images/05-lm.png)
+![](viewpoints/posts/2023/09/06/images/AlanWarburton-QuantifiedHuman-991x724.png)
 :::
 :::
 
@@ -177,11 +177,11 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## We have a plethora of jobs that we cannot fill in data science at the moment. We’ve had all sorts of initiatives in terms of trying to retrain people... but unless we get that pipeline coming through [from schools], we’re always going to have this problem at the top. Data is everywhere – in every single thing that we do, in all of our walks of life... so there is absolutely no reason why we can’t excite children in a career in data science.
-Rachel Hilliam calls for data science outreach in schools 
+## Is an AI singularity drawing near? Not according to Stanford University's David Donoho. The notion of an AI singularity 'is a kind of misdirection', he said. Something very profound is happening, Donoho argued, and it is the culmination of three long-term initiatives in data science that have come together in recent years. 'They constitute a singularity on their own.'
+David Donoho on the next 50 years of data science 
 
 ::: {.button}
-[Watch the lecture](viewpoints/editors-blog/posts/2023/07/27/schools-outreach.qmd)
+[Read more in our JSM blog](viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd)
 :::
 
 :::
@@ -219,11 +219,11 @@ Rachel Hilliam calls for data science outreach in schools
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## Despite some stumbles, OpenAI’s 'junior programmer' presents a real step forward in the ChatGPT offering. At this stage, I would argue that Code Interpreter may be useful for quick summaries, visualisations and a little basic data cleaning and some preliminary investigations. However, based on what I’ve seen so far, it is clear to me that highly trained statisticians won’t be replaced anytime soon.
-Real World Data Science takes ChatGPT's Code Interpreter for a test drive 
+## We have a plethora of jobs that we cannot fill in data science at the moment. We’ve had all sorts of initiatives in terms of trying to retrain people... but unless we get that pipeline coming through [from schools], we’re always going to have this problem at the top. Data is everywhere – in every single thing that we do, in all of our walks of life... so there is absolutely no reason why we can’t excite children in a career in data science.
+Rachel Hilliam calls for data science outreach in schools 
 
 ::: {.button}
-[Explore the demo](viewpoints/editors-blog/posts/2023/07/19/code-interpreter.qmd)
+[Watch the lecture](viewpoints/editors-blog/posts/2023/07/27/schools-outreach.qmd)
 :::
 
 :::
