footer code fixes

--- a/viewpoints/posts/2023/09/06/biased-algorithms.qmd
+++ b/viewpoints/posts/2023/09/06/biased-algorithms.qmd
@@ -62,13 +62,13 @@ It is time to counter the ethical, political and social costs with a concerted s
 ::: grid
 ::: {.g-col-12 .g-col-md-12}
 About the author
-: <a href="https://theconversation.com/profiles/arshin-adib-moghaddam-211780">Arshin Adib-Moghaddam</a> is professor in global thought and comparative philosophies, <em><a href="https://theconversation.com/institutions/soas-university-of-london-975">SOAS, University of London</a>
+: <a href="https://theconversation.com/profiles/arshin-adib-moghaddam-211780">Arshin Adib-Moghaddam</a> is professor in global thought and comparative philosophies, <a href="https://theconversation.com/institutions/soas-university-of-london-975">SOAS, University of London</a>.
 :::
 ::: {.g-col-12 .g-col-md-12}
 Copyright and licence
 : This article is republished from <a href="https://theconversation.com">The Conversation</a> under a Creative Commons license. Read the <a href="https://theconversation.com/for-minorities-biased-ai-algorithms-can-damage-almost-every-part-of-life-211778">original article</a>.
 
-: Image by <a href="https://alanwarburton.co.uk/">Alan Warburton</a> / © BBC / <a href="https://www.betterimagesofai.org">Better Images of AI</a> / Quantified Human / <a href="https://creativecommons.org/licenses/by/4.0/">Licenced by CC-BY 4.0</a>.
+: Image by <a href="http://alanwarburton.co.uk/">Alan Warburton</a> / © BBC / <a href="https://www.betterimagesofai.org">Better Images of AI</a> / Quantified Human / <a href="https://creativecommons.org/licenses/by/4.0/">Licenced by CC-BY 4.0</a>.
 :::
 :::
 :::
