Added link to RWDS_post_template

--- a/contributor-docs/call-for-contributions.qmd
+++ b/contributor-docs/call-for-contributions.qmd
@@ -15,7 +15,7 @@ Below is a list of our core content areas. We welcome submissions in any of thes
 * [Datasets](datasets.qmd)
 * [Training guides](training-guides.qmd)
 * [Recommenders](recommender.qmd)
-* **New!** [DataScienceBites](datasciencebites.qmd)
+* [DataScienceBites](datasciencebites.qmd)
 
 Submissions can focus on any and all topics and application areas. We want our content to reflect the breadth and depth of real-world data science. 
 
@@ -23,7 +23,9 @@ Submissions can focus on any and all topics and application areas. We want our c
 Real World Data Science is for all who work in data science -- whether they are students, teachers, practitioners or leaders. Submissions do not have to appeal to *all* data scientists, however. Contributors should think carefully about who they are trying to reach, and craft their submissions accordingly.
 
 ## What can submissions include?
-We encourage contributors to experiment with and include different media formats in their submissions -- text, images, audio and video. And as our site is built on [Quarto](https://quarto.org/) -- the new open-source publishing system developed by [Posit](https://posit.co/) -- submissions to Real World Data Science can also include code cells, equations, figures, interactive data displays, and other elements to enrich the user experience. If you haven't used Quarto before, check out this fantastic [tutorial](https://quarto.org/docs/get-started/) from the developers.
+We encourage contributors to experiment with and include different media formats in their submissions -- text, images, audio and video. And as our site is built on [Quarto](https://quarto.org/) -- the new open-source publishing system developed by [Posit](https://posit.co/) -- submissions to Real World Data Science can also include code cells, equations, figures, interactive data displays, and other elements to enrich the user experience. 
+
+If you haven't used Quarto before, check out this fantastic [tutorial](https://quarto.org/docs/get-started/) from the developers. You can also explore some of the range of Quarto features that we use in this [GitHub template repository](https://github.com/finnoh/RWDS_post_template), created by [Finn-Ole Höner](https://github.com/finnoh). It's an excellent resource to help Real World Data Science contributors get started!
 
 ## How to submit
 Once you've reviewed our notes for contributors and settled on a content area, theme and audience, please review our [contributor guidelines](contributor-guidelines.qmd) for details on the submission process.
