Submission process steps updated

--- a/contributor-docs/contributor-guidelines.qmd
+++ b/contributor-docs/contributor-guidelines.qmd
@@ -17,7 +17,7 @@ Real World Data Science is built on [Quarto](https://quarto.org/), the new open-
 ## The submission process
 1. Contact site editor [Brian Tarran](mailto:b.tarran@rss.org.uk) to discuss your proposed submission.
 
-2. Working with the editor, draw up a short content brief, containing the following:
+2. Write up a short content brief containing the following:
     + Title of submission
     + Author name(s) and affiliation(s)
     + Theme/topic area
@@ -27,11 +27,12 @@ Real World Data Science is built on [Quarto](https://quarto.org/), the new open-
     + Formats and features (e.g., text, audio, video; code blocks, interactive data visualisations, etc.) 
     + Accessibility considerations 
     + Target length/word count 
-    + First draft to be submitted by... 
+    + First draft to be submitted by...
+The [RWDS_post_template repository](https://github.com/finnoh/RWDS_post_template) on GitHub contains a Quarto document (content-brief.qmd) that can be used to produce a content brief in the style and format of a Real World Data Science article.
 
-3. Once a content brief is finalised and approved, content is to be prepared in the agreed format and with reference to our [style guide](style-guide.qmd). For simple text-based articles, we recommend using Google Docs or Microsoft Word; for submissions that incorporate technical or multimedia content, such as code, equations or interactive graphics, we recommend the Quarto (.qmd) file format, but documents can also be submitted in Jupyter notebook (.ipynb) and R Markdown (.Rmd) formats. 
+3. Once a content brief is finalised and approved, content is to be prepared in the agreed format and with reference to our [style guide](style-guide.qmd). For simple text-based articles, we recommend using Google Docs or Microsoft Word; for submissions that incorporate technical or multimedia content, such as code, equations or interactive graphics, we recommend the Quarto (.qmd) file format. Use the [RWDS_post_template repository](https://github.com/finnoh/RWDS_post_template) to create your draft article in Quarto using the correct style and formatting. A sample article in the repo (report.qmd) contains code examples for the Quarto features used by Real World Data Science. Documents can be submitted in Jupyter notebook (.ipynb) and R Markdown (.Rmd) formats but will require conversion before publishing.
 
-4. Draft submissions should be sent via email to the editor. Alternatively, contributors can commit their drafts to their own GitHub accounts and add the [Real World Data Science GitHub account](https://github.com/realworlddatascience) as a collaborator. 
+4. Draft submissions should be sent via email to the editor. Alternatively, contributors can commit their drafts to their own GitHub accounts using the [RWDS_post_template repository](https://github.com/finnoh/RWDS_post_template) and add site editor [Brian Tarran](https://github.com/brtarran) as a collaborator. 
 
 ## Copyright and content licencing 
 Contributors retain copyright of their work, but agree to publish their work under a Creative Commons licence. Contributors are free to [choose the licence](https://creativecommons.org/choose/) that best suits their content. The chosen licence should be indicated on the draft submission.
