blog post added, homepage updated

--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!biased-algorithms.qmd"
+    - "!template.qmd"
     - "!01-purchase-to-plate.qmd"
     - "!02-competition-design.qmd"
     - "!03-first-place-winners.qmd"
@@ -134,15 +134,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/posts/2023/09/06/biased-algorithms.qmd">
+<a href="/viewpoints/editors-blog/posts/2023/09/12/template.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## For minorities, biased AI algorithms can damage almost every part of life
-'Bad data does not only produce bad outcomes. It can also help to suppress sections of society.' In his new book, *Is Artificial Intelligence Racist?*, Arshin Adib-Moghaddam explores the relationship between various forms of racism and sexism and artificial intelligence.
+## Contributors: check out the new Real World Data Science template repo on GitHub
+Thinking of contributing to Real World Data Science but not sure how to get started? The 'RWDS_post_template' repository, created by Finn-Ole Höner, demonstrates various Quarto features and helps site contributors to create content using our house style and format.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/posts/2023/09/06/images/AlanWarburton-QuantifiedHuman-991x724.png)
+![](viewpoints/editors-blog/posts/2023/09/12/images/roman-synkevych-UT8LMo-wlyk-unsplash.png)
 :::
 :::
 
