--- a/index.qmd
+++ b/index.qmd
@@ -16,13 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!template.qmd"
-    - "!01-purchase-to-plate.qmd"
-    - "!02-competition-design.qmd"
-    - "!03-first-place-winners.qmd"
-    - "!04-second-place-winners.qmd"
-    - "!05-third-place-winners.qmd"
-    - "!06-value-of-competitions.qmd"
+    - "!pseudo-data-science.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -31,17 +25,17 @@ listing:
     max-items: 3
     feed: false
 
-  # - id: case-studies
-  #   contents: 
-  #   - /case-studies
-  #   - "!index.qmd"
-  #   sort: "date desc"
-  #   type: grid
-  #   categories: false
-  #   sort-ui: false
-  #   filter-ui: false
-  #   max-items: 3
-  #   feed: false
+  - id: case-studies
+    contents: 
+    - /case-studies
+    - "!index.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
 
   - id: ideas
     contents: 
@@ -118,31 +112,31 @@ listing:
     max-items: 3
     feed: false
 
-  - id: career-profiles
-    contents: 
-    - /careers/career-profiles
-    - "!index.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
+  # - id: career-profiles
+  #   contents: 
+  #   - /careers/career-profiles
+  #   - "!index.qmd"
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
 
 toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/09/12/template.qmd">
+<a href="/viewpoints/posts/2023/09/18/pseudo-data-science.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Contributors: check out the new Real World Data Science template repo on GitHub
-Thinking of contributing to Real World Data Science but not sure how to get started? The 'RWDS_post_template' repository, created by Finn-Ole Höner, demonstrates various Quarto features and helps site contributors to create content using our house style and format.
+## ‘Pseudo data science’ and other pitfalls: lessons from the UK’s stats regulator on how not to be misleading
+In organisations, data scientists are not the only players who get to influence how data and data science are presented and used -- so they need to be on their guard for misleading or distorted presentations of their work, as Ed Humpherson explains. 
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/09/12/images/roman-synkevych-UT8LMo-wlyk-unsplash.png)
+![](viewpoints/posts/2023/09/18/images/distorted-data.png)
 :::
 :::
 
@@ -167,6 +161,48 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 </a>
 
 ::: {#latest-content}
+:::
+
+:::
+:::
+
+::: {.pullout-text}
+::: {.pullout-container}
+::: {.pullout-block .black-background}
+![](images/quote-purple.png){width="100px"}
+
+## The Purchase to Plate Crosswalk is a key tool for understanding the healthfulness of retail food purchases in the US and it does this by linking scanner data on what people buy with data on the nutritional content of those foods. But there's a catch: scanner data is collected about hundreds of thousands of food products, whereas nutritional profile information is available for only a few thousand items -- giving rise to a one-to-many matching problem that takes several hundred person-hours to resolve. What if machine learning can help?
+Discover the full story of the 'Food for Thought Challenge' 
+
+::: {.button}
+[Read the case study collection](case-studies/posts/2023/08/21/00-food-for-thought.qmd)
+:::
+
+:::
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+<a href="case-studies/index.qmd">
+
+## Case Studies
+</a> 
+
+::: {#case-studies}
+:::
+
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+<a href="viewpoints/interviews/index.qmd">
+
+## Interviews 
+</a>
+
+::: {#interviews}
 :::
 
 :::
@@ -203,54 +239,12 @@ David Donoho on the next 50 years of data science
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/interviews/index.qmd">
-
-## Interviews 
-</a>
-
-::: {#interviews}
-:::
-
-:::
-:::
-
-::: {.pullout-text}
-::: {.pullout-container}
-::: {.pullout-block .black-background}
-![](images/quote-purple.png){width="100px"}
-
-## We have a plethora of jobs that we cannot fill in data science at the moment. We’ve had all sorts of initiatives in terms of trying to retrain people... but unless we get that pipeline coming through [from schools], we’re always going to have this problem at the top. Data is everywhere – in every single thing that we do, in all of our walks of life... so there is absolutely no reason why we can’t excite children in a career in data science.
-Rachel Hilliam calls for data science outreach in schools 
-
-::: {.button}
-[Watch the lecture](viewpoints/editors-blog/posts/2023/07/27/schools-outreach.qmd)
-:::
-
-:::
-:::
-:::
-
-::: {.content-container}
-::: {.listing-block}
 <a href="careers/index.qmd">
 
 ## Data Science Careers 
 </a>
 
 ::: {#careers}
-:::
-
-:::
-:::
-
-::: {.content-container}
-::: {.listing-block}
-<a href="careers/career-profiles/index.qmd">
-
-## Career profiles 
-</a>
-
-::: {#career-profiles}
 :::
 
 :::
