small text edits

--- a/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
@@ -21,9 +21,14 @@ From there, McVey went on to present a set of "guerilla data science tactics" th
 
 ![Elaine McVey's "guerilla data science tactics" for building successful data science teams.](images/mcvey-slide.png){fig-alt="Elaine McVey's 'guerilla data science tactics' for building successful data science teams. Start by 'scanning for opportunities', then 'show, don't tell', 'take the data and run', 'nail the landing', and 'up the ante'."}
 
-Data scientists should start by scanning for opportunities to help the organisation, before building a small-scale version of what it is they propose to do. Once buy-in is achieved, and data is made available, it's time to run with the project. Once complete, you need to "nail the landing", McVey said, and make sure to communicate results broadly -- not just to primary stakeholders, but across the organisation. Then comes time to "up the ante": if your first project has build some organisational goodwill, leverage that and look for something higher risk, with higher potential reward for the organisation.
+Data scientists should start by scanning for opportunities to help the organisation, before building a small-scale version of what it is they propose to do. Once buy-in is achieved, and data is made available, it's time to run with the project. Once complete, you need to "nail the landing", McVey said, and make sure to communicate results broadly -- not just to primary stakeholders, but across the organisation. Then comes time to "up the ante": if your first project has built some organisational goodwill, leverage that and look for something higher risk, with higher potential reward for the organisation.
 
-Throughout this process, McVey said, data scientists should be building foundations for future projects -- creating data pipelines, R packages, etc., that can be reused later. This was a point picked up and developed upon by Meza, who walked through in detail the steps required to establish "data foundations" within organisations, drawing on his own past experiences. Typically, he said, organisations collect data to store it -- but always data should be collected and managed with analysis in mind.
+Throughout this process, McVey said, data scientists should be building foundations for future projects -- creating data pipelines, R packages, etc., that can be reused later. This was a point picked up and developed upon by Meza, who walked through in detail the steps required to establish "data foundations" within organisations, drawing on his own past experiences. Typically, he said, organisations seem to collect data just to store it -- but always data should be collected, stored, and managed with analysis in mind.
+
+<!-- ### Talk title
+Add write-up here
+
+*Add your name and affiliation here* -->
 
 <!-- ## Wednesday, September 20
 ### Talk title
