--- a/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
@@ -25,6 +25,19 @@ Data scientists should start by scanning for opportunities to help the organisat
 
 Throughout this process, McVey said, data scientists should be building foundations for future projects -- creating data pipelines, R packages, etc., that can be reused later. This was a point picked up and developed upon by Meza, who walked through in detail the steps required to establish "data foundations" within organisations, drawing on his own past experiences. Typically, he said, organisations seem to collect data just to store it -- but always data should be collected, stored, and managed with analysis in mind.
 
+### A hacker's guide to open source LLMs
+Fast.ai's Jeremy Howard lifted the hood on large language models (LLMs) in the second of two keynotes this morning. 
+
+Beginning with an accessible overview of what LLMs are, how they work, and how they are trained, Howard then addressed some of the criticisms made of LLMs -- that they "can't reason" or give correct answers.
+
+As Howard explained, a model like OpenAI's GPT-4 is not trained at any point to give correct answers to prompts -- only to predict the most likely next word, or word token, in a sequence. 
+
+The pre-training step, for example, does not involve only feeding the model with "correct answers", instead relying on a corpus of text from the internet -- some (or, maybe, much) of which may consist of factual inaccuracies, errors, falsehoods, etc. And in the fine-tuning stage, when human feedback is used to either reward or penalise model outputs, Howard said there is a preference for confident-sounding responses -- and so, again, this doesn't necessarily reward the model for giving correct answers.
+
+Howard made the case that users have to help language models to give good answers, and that custom instructions can be used to change the way models respond. He then walked delegates through a series of demos using open-source LLMs, to show how outputs can be refined and improved.
+
+"My view is that if you are going to be good at language modelling in any way," said Howard, "you have to be good at using language models."
+
 <!-- ### Talk title
 Add write-up here
 
@@ -37,7 +50,7 @@ Add write-up here
 *Add your name and affiliation here*  -->
 
 ::: {.callout-note appearance="simple"}
-Want to contribute to this blog? Fork [our repo](https://github.com/realworlddatascience/realworlddatascience.github.io), update this file in the `positconf-blog` branch, and make a pull request!
+Want to contribute to this blog? Fork [our repo](https://github.com/realworlddatascience/realworlddatascience.github.io), update [this file](https://github.com/realworlddatascience/realworlddatascience.github.io/blob/positconf-blog/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd) in the `positconf-blog` branch, and make a pull request!
 :::
 
 ::: {.article-btn}
