--- a/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
@@ -6,7 +6,7 @@ categories:
   - Conferences
   - Events
 author: Brian Tarran
-date: 09/19/2023
+date: last-modified
 toc: true
 image: images/chicago-theatre.png
 image-alt: Chicago Theatre sign, illuminated at night.
@@ -37,6 +37,28 @@ The pre-training step, for example, does not involve only feeding the model with
 Howard made the case that users have to help language models to give good answers, and that custom instructions can be used to change the way models respond. He then walked delegates through a series of demos using open-source LLMs, to show how outputs can be refined and improved.
 
 "My view is that if you are going to be good at language modelling in any way," said Howard, "you have to be good at using language models."
+
+### Documenting Things: Openly for Future Us
+Julia Stewart Lowndes, founding director of [Openscapes](https://openscapes.org/), gave a compelling talk advocating for the importance of documentation for data science projects.
+
+Documenting things, Lowndes said, should be done for the benefit of "Future Us": not only ourselves but our teams and our communities who may be contributing to or revisiting the project in the next hours, days, weeks, months and years.
+
+Documenting things does not have to be painful, Lowndes said. In fact, it's supposed to be helpful. It does, however, take time and intention. And it means slowing down briefly to write things down now, in order that work speeds up in the longer term.
+
+Lowndes then shared some pointers to help people get started with documentation:
+
+1. Have a place to write things down -- Google Docs, GitHub, wherever -- ideally a place where people can work collaboratively.
+    i) Develop the habit of writing things down as you go.
+    ii) Write in a modular way -- small bits of text are less daunting and easier to maintain collaboratively.
+2. Have an audience in mind -- you are writing this for someone, so make it engaging for them.
+    i) write in an inclusive tone. 
+    ii) Narrate code in small chunks, and in a way that you'd say out loud if teaching.
+    iii) Share, and share early -- you want to be able to iterate on your documentation and receive feedback. Also, sharing openly does not always mean publicly -- manage permissions as necessary.
+3. Design for readability and accessibility. 
+    i) Use section headers -- particularly important for screen readers, but this also helps generally to describe the flow of a document. Plus, you can link readers directly to specific parts of a document.
+    ii) Use text formatting.
+    iii) Use alt-text for images, describing the take-home message of the image.
+
 
 <!-- ### Talk title
 Add write-up here
