--- a/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
@@ -59,6 +59,14 @@ Lowndes then shared some pointers to help people get started with documentation:
     ii) Use text formatting.
     iii) Use alt-text for images, describing the take-home message of the image.
 
+### Teaching Data Science in Adverse Circumstances: Posit Cloud and Quarto to the Rescue
+Professor Aleksander Dietrichson of the Universidad de San Martin brought a valuable perspective to posit::conf(2023) on the challenges of teaching data science in the face of technology and language barriers.
+
+At the public, state-funded university in Argentina where Dietrichson works, more than half of students do not have access to laptops or computers at home, and those who do have access -- whether at home or at school -- may not have access to the latest kit. But "[Posit Cloud](https://posit.cloud/) solves the resource issue", Dietrichson said. The free-to-use, online browser-based version of Posit's tools runs on anything; Dietrichson said he's tested it successfully on both decade-old computers and cellphones -- though he doesn't recommend using it on a cellphone!
+
+On language barriers, he pointed out that learning to code in R and Python can be challenging when English isn't your first language -- if you don't have semantic access to function names, for example, there will be a steeper learning curve for students.
+
+Dietrichson also has to deal with the problem of "arithmaphobia" among some of the liberal arts students he teaches. This has necessitated a reshuffling of the typical statistics curriculum, he said, in order to make it easier for students to access. But the work is worth it, Dietrichson explained: many of his students want to work in careers like journalism, and he believes that "journalists should be statistically literate".
 
 <!-- ### Talk title
 Add write-up here
