--- a/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
@@ -73,11 +73,22 @@ Add write-up here
 
 *Add your name and affiliation here* -->
 
-<!-- ## Wednesday, September 20
-### Talk title
+## Wednesday, September 20
+### R Not Only In Production
+Kara Woo, senior data science engineer at InsightRX, began her Wednesday morning keynote with a rousing description of posit::conf(2023) being like a "great community garden" where things are being cultivated and shared for the benefit of all. This is an important feeling, Woo said, because it doesn't always feel like that in our day jobs. Data scientists can feel siloed, not able to share ideas with like-minded people, and facing resistance from people who say "R can't do that, R isn't a real programming language" -- a comment that elicited a groan of weary familiarity from sections of the crowd.
+
+But as Woo went on to explain, "it is possible to build quality software in R" and "it is possible to have an organisation where the strengths of R and the people who use it influence the organisation as a whole".
+
+Woo was speaking from her experience at InsightRX, a precision medicine company, which makes software for clinicians to inform individualised dosing decisions for patients. Through a tool called Nova, clinicians feed in data about a patient's unique characteristics, which is then passed to R for analysis, which then returns dosage recommendations to Nova.
+
+In InsightRX, R has also been used to solve problems that are not strictly data science problems. Woo gave the example of working with a colleague to write an R package to identify data labels that have been changed and rollout translations for those labels in multiple languages for software users in different parts of the world.
+
+"Our mindset of R being a first-class language empowers us to solve problems," said Woo.
+
+<!-- ### Talk title
 Add write-up here
 
-*Add your name and affiliation here*  -->
+*Add your name and affiliation here* -->
 
 ::: {.callout-note appearance="simple"}
 Want to contribute to this blog? Fork [our repo](https://github.com/realworlddatascience/realworlddatascience.github.io), update [this file](https://github.com/realworlddatascience/realworlddatascience.github.io/blob/positconf-blog/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd) in the `positconf-blog` branch, and make a pull request!
@@ -99,7 +110,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "Live from Chicago: Real World Data Science at posit::conf(2023)." Real World Data Science, September 19, 2023. [URL](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.html)
+: Tarran, Brian. 2023. "Live from Chicago: Real World Data Science at posit::conf(2023)." Real World Data Science, September 19, 2023, updated September 20, 2023. [URL](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.html)
 :::
 :::
 :::
