--- a/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
@@ -85,6 +85,15 @@ In InsightRX, R has also been used to solve problems that are not strictly data 
 
 "Our mindset of R being a first-class language empowers us to solve problems," said Woo.
 
+### It's Abstractions All the Way Down...
+The second of the morning keynotes on day two of posit::conf(2023) was by JD Long, vice president of risk management at RenaissanceRe.
+
+During Long's insightful -- and frequently very funny -- talk, this slide appeared:
+
+![JD Long's assertion #1.](images/jd-slide.PNG){fig-alt="JD Long's slide reads: 'The single biggest business value derived from the data science movement in the last 13 years is making it legitimate to code outside of IT roles.'"}
+
+Do you agree with Long's assertion? If you don't, what *is* the single biggest business value that's been derived from the data science movement? Share your thoughts in the comments below.
+
 <!-- ### Talk title
 Add write-up here
 
