--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!pseudo-data-science.qmd"
+    - "!positconf-blog.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -128,15 +128,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/posts/2023/09/18/pseudo-data-science.qmd">
+<a href="/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## ‘Pseudo data science’ and other pitfalls: lessons from the UK’s stats regulator on how not to be misleading
-In organisations, data scientists are not the only players who get to influence how data and data science are presented and used -- so they need to be on their guard for misleading or distorted presentations of their work, as Ed Humpherson explains. 
+## Live from Chicago: Real World Data Science at posit::conf(2023)
+This year's posit::conf has come to a close, and we had a great time in Chicago learning about data science software, ideas, and applications. Read key takeaways from a selection of talks and sessions in our conference blog -- more updates to come!
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/posts/2023/09/18/images/distorted-data.png)
+![](viewpoints/editors-blog/posts/2023/09/19/images/chicago-theatre.png)
 :::
 :::
 
