post, images added, homepage updated

--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!positconf-blog.qmd"
+    - "!rgirls-interview.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -61,19 +61,17 @@ listing:
     max-items: 3
     feed: false
 
-  # - id: viewpoints
-  #   contents: 
-  #   - /viewpoints/posts
-  #   - /viewpoints/interviews
-  #   - "!index.qmd"
-  #   - "!london-data-week.qmd"
-  #   sort: "date desc"
-  #   type: grid
-  #   categories: false
-  #   sort-ui: false
-  #   filter-ui: false
-  #   max-items: 3
-  #   feed: false
+  - id: viewpoints
+    contents: 
+    - /viewpoints/posts
+    - "!index.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
 
   # - id: editors-blog
   #   contents: 
@@ -99,18 +97,17 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  - id: interviews
-    contents: 
-    - /viewpoints/interviews
-    - "!index.qmd"
-    - "!london-data-week.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
+  # - id: interviews
+  #   contents: 
+  #   - /viewpoints/interviews
+  #   - "!index.qmd"
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
 
   # - id: career-profiles
   #   contents: 
@@ -128,15 +125,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd">
+<a href="/viewpoints/interviews/posts/2023/09/25/rgirls-interview.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Live from Chicago: Real World Data Science at posit::conf(2023)
-This year's posit::conf has come to a close, and we had a great time in Chicago learning about data science software, ideas, and applications. Read key takeaways from a selection of talks and sessions in our conference blog -- more updates to come!
+## 'What if we try to bring R to the classroom? That was our wacky idea'
+R-Girls is a new project aiming to introduce R into secondary school lessons -- just not through computer science classes! Real World Data Science meets with one of the project's founders, Mohammed Mohammed, to learn more.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/09/19/images/chicago-theatre.png)
+![](viewpoints/interviews/posts/2023/09/25/images/rgirls.png)
 :::
 :::
 
@@ -184,6 +181,19 @@ Discover the full story of the 'Food for Thought Challenge'
 
 ::: {.content-container}
 ::: {.listing-block}
+<a href="viewpoints/index.qmd">
+
+## Viewpoints 
+</a>
+
+::: {#viewpoints}
+:::
+
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
 <a href="case-studies/index.qmd">
 
 ## Case Studies
@@ -195,29 +205,16 @@ Discover the full story of the 'Food for Thought Challenge'
 :::
 :::
 
-::: {.content-container}
-::: {.listing-block}
-<a href="viewpoints/interviews/index.qmd">
-
-## Interviews 
-</a>
-
-::: {#interviews}
-:::
-
-:::
-:::
-
 ::: {.pullout-text}
 ::: {.pullout-container}
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## Is an AI singularity drawing near? Not according to Stanford University's David Donoho. The notion of an AI singularity 'is a kind of misdirection', he said. Something very profound is happening, Donoho argued, and it is the culmination of three long-term initiatives in data science that have come together in recent years. 'They constitute a singularity on their own.'
-David Donoho on the next 50 years of data science 
+## The Purchase to Plate Crosswalk is a key tool for understanding the healthfulness of retail food purchases in the US and it does this by linking scanner data on what people buy with data on the nutritional content of those foods. But there's a catch: scanner data is collected about hundreds of thousands of food products, whereas nutritional profile information is available for only a few thousand items -- giving rise to a one-to-many matching problem that takes several hundred person-hours to resolve. What if machine learning can help?
+Discover the full story of the 'Food for Thought Challenge' 
 
 ::: {.button}
-[Read more in our JSM blog](viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd)
+[Read the case study collection](case-studies/posts/2023/08/21/00-food-for-thought.qmd)
 :::
 
 :::
