--- a/index.qmd
+++ b/index.qmd
@@ -168,11 +168,11 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## The Purchase to Plate Crosswalk is a key tool for understanding the healthfulness of retail food purchases in the US and it does this by linking scanner data on what people buy with data on the nutritional content of those foods. But there's a catch: scanner data is collected about hundreds of thousands of food products, whereas nutritional profile information is available for only a few thousand items -- giving rise to a one-to-many matching problem that takes several hundred person-hours to resolve. What if machine learning can help?
-Discover the full story of the 'Food for Thought Challenge' 
+## The opaque nature of AI technology poses serious challenges to legal systems which have been built around individual or human accountability. On a more fundamental level, basic human rights are threatened, as legal accountability is blurred by the maze of technology placed between perpetrators and the various forms of discrimination that can be conveniently blamed on the machine.
+Arshin Adib-Moghaddam, author, *Is Artificial Intelligence Racist?*
 
 ::: {.button}
-[Read the case study collection](case-studies/posts/2023/08/21/00-food-for-thought.qmd)
+[Read the full article](viewpoints/posts/2023/09/06/biased-algorithms.qmd)
 :::
 
 :::
